checking giftcard and creation route + update swagger
